--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
         <ol>
 
           <li>
-            <p>Ben Basat R., Ramanathan S., Li Y., Antichi G., Yu M., Mitzenmacher M.
-            <br><b>PINT: Probabilistic In-band Network Telemetry</b>
-            <br><em>ACM SIGCOMM</em>, New York, New York, US, 2020
-            <br>Acceptance ratio: 21%
+            <p>Mohammad Mahdi Tajiki, S Salsano, L Chiaraviglio, M Shojafar, B Akbari
+            <br><b>Joint energy efficient and QoS-aware path allocation and VNF placement for service function chaining</b>
+            <br><em>IEEE Transactions on Network and Service Management</em>,  15 (4), 1378-1392
             <br>
             <span class="label label-primary"><a href="">PDF</a></span>
             <span class="label label-primary"><a href="">BibTex</a></span>
@@ -129,10 +128,9 @@
           </li>
 
           <li>
-            <p>Chiesa M., Sedar R., Antichi G., Borokhovich M., Kamisinski A., Nikolaidis G., Schmid S.
-            <br><b>PURR: A Primitive for Reconfigurable Fast Reroute</b>
-            <br><em>ACM CoNEXT</em>, Orlando, Florida, US, 2019
-            <br>Acceptance ratio: 16%
+            <p>PL Ventre, Mohammad Mahdi Tajiki, S Salsano, C Filsfils
+            <br><b>SDN architecture and southbound APIs for IPv6 segment routing enabled wide area networks</b>
+            <br><em>IEEE Transactions on Network and Service Management</em>,  15 (4), 1378-1392
             <br>
 	    <span class="label label-primary"><a href="https://dl.acm.org/doi/10.1145/3359989.3365410">PDF</a></span>
             <span class="label label-primary"><a href="files/bibtex/purr.bib">BibTex</a></span>
@@ -141,9 +139,9 @@
           </li>
 		
 	  <li>
-            <p>Neugebauer R., Antichi G., Zazo J.F., Audzevich Y., López-Buedo S., Moore A.W.
-            <br><b>Understanding PCIe performance for end host networking</b>
-            <br><em>ACM SIGCOMM</em>, Budapest, Hungary, 2018
+            <p>Mohammad Mahdi Tajiki, B Akbari, N Mokari
+            <br><b>Optimal Qos-aware network reconfiguration in software defined cloud data centers</b>
+            <br><em>Elsevier, Computer Networks</em>, 120, 71-86
             <br>Acceptance ratio: 18%
             <br>
             <span class="label label-primary"><a href="https://dl.acm.org/doi/10.1145/3230543.3230560">PDF</a></span>
@@ -154,26 +152,15 @@
           </li>
 
           <li>
-            <p>Handley M., Raiciu C., Agache A., Voinescu A., Moore A.W., Antichi G., Wójcik M.
-            <br><b>Re-architecting datacenter networks and stacks for low latency and high performance</b>
-            <br><em>ACM SIGCOMM</em>, Los Angeles, California, US, 2017
+            <p>Mohammad Mahdi Tajiki, B. Akbari, M. Shojafar, SH. Ghasemi, ML. Barazandeh, N. Mokari, L. Chiaraviglio, M. Zink
+            <br><b>CECT: Computationally Efficient Congestion-avoidance and Traffic Engineering in Software-defined Cloud Data Centers</b>
+            <br><em>Springer, Cluster Computing</em>,  1-17
 	    <br>Acceptance ratio: 14% <font color="FF0000"><b>BEST PAPER AWARD</b></font>
             <br>
             <span class="label label-primary"><a href="https://dl.acm.org/doi/10.1145/3098822.3098825">PDF</a></span>
             <span class="label label-primary"><a href="files/bibtex/ndp.bib">BibTex</a></span>
             <span class="label label-primary"><a href="https://dl.acm.org/ft_gateway.cfm?id=3098825&amp;ftid=1905378">Video</a></span>
             </p>
-          </li>
-
-	  <li>
-            <p>Antichi G., Castro I., Chiesa M., Fernandes E., Lapeyrade R., Kopp D., Han J., Bruyere M., Dietzel C., Gusat M., Moore A.W., Owezarski P., Uhlig S., Canini M.
-            <br><b>ENDEAVOUR: A Scalable SDN Architecture for Real-World IXPs</b>
-            <br><em>IEEE Journal on Selected Area of Communication</em>, Special issue on Emerging Technologies in Software-driven Communication, 2017
-            <br>Impact factor: 8.085 
-            <br>
-            <span class="label label-primary"><a href="https://ieeexplore.ieee.org/document/8068192">PDF</a></span>
-	    <span class="label label-primary"><a href="files/bibtex/endeavour.bib">BibTex</a></span>
-	    </p>
           </li>
 
         </ol>
