--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p align="justify">
 	I am a research associate at the School of Electronic Engineering and Computer Science of Queen Mary University of 
 	London. My research interests cover a broad spectrum of topics in networks. Specifically, they span network monitoring, networking resourch allocation, Service Function Chanining (SFC), Network Function Virtualization (NFV), Software Defined Networikng (SDN). Details of my publications can be found 
-	on my <a href="https://scholar.google.com/citations?user=Tic6RTQAAAAJ&hl=en">Google Scholar profile. <br>
+	on my <a href="https://scholar.google.com/citations?user=Tic6RTQAAAAJ&hl=en">Google Scholar profile.</a> <br>
 	<u>I am always looking for motivated students willing to collaborate with me.</u>
 	</p>
 
@@ -155,7 +155,6 @@
             <p>Mohammad Mahdi Tajiki, B. Akbari, M. Shojafar, SH. Ghasemi, ML. Barazandeh, N. Mokari, L. Chiaraviglio, M. Zink
             <br><b>CECT: Computationally Efficient Congestion-avoidance and Traffic Engineering in Software-defined Cloud Data Centers</b>
             <br><em>Springer, Cluster Computing</em>,  1-17
-	    <br>Acceptance ratio: 14% <font color="FF0000"><b>BEST PAPER AWARD</b></font>
             <br>
             <span class="label label-primary"><a href="https://dl.acm.org/doi/10.1145/3098822.3098825">PDF</a></span>
             <span class="label label-primary"><a href="files/bibtex/ndp.bib">BibTex</a></span>
