--- a/index.html
+++ b/index.html
@@ -107,10 +107,8 @@
 
         <h2 id="bio">About me</h2>
         <p align="justify">
-	I am a research associate at the School of Electronic Engineering and Computer Science of Queen Mary University of 
-	London. My research interests cover a broad spectrum of topics in networks. Specifically, they span network monitoring, networking resourch allocation, Service Function Chanining (SFC), Network Function Virtualization (NFV), Software Defined Networikng (SDN). Details of my publications can be found 
-	on my <a href="https://scholar.google.com/citations?user=Tic6RTQAAAAJ&hl=en">Google Scholar profile.</a> <br>
-	<u>I am always looking for motivated students willing to collaborate with me.</u>
+        	I am a research associate at the School of Electronic Engineering and Computer Science at Queen Mary University of London. My research interests cover a broad spectrum of topics in computer networks. Specifically, they span network monitoring, resource allocation, Service Function Chaining (SFC), Network Function Virtualization (NFV), Software-Defined Networking (SDN), Mathematical Formulation of networking problems. Lately, my focus is on applying artificial intelligence on network monitoring. <a href="https://scholar.google.com/citations?user=Tic6RTQAAAAJ&hl=en">Google Scholar profile.</a> I also acted as a joint investigator on multiple projects, both EU H2020 (Superfluidity) and UK EPSRC (EARL).<br>
+        	<u>I am always looking for motivated students willing to collaborate with me.</u>
 	</p>
 
         <h2 id="publications">Selected Publications</h2>
